@@ -1772,9 +1772,9 @@ qpdf_oh_get_page_content_data(qpdf_data qpdf, qpdf_oh page_oh, unsigned char** b
 }
 
 void
-qpdf_free_buffer(unsigned char** bufp)
+qpdf_oh_free_buffer(unsigned char** bufp)
 {
-    QTC::TC("qpdf", "qpdf-c called qpdf_free_buffer");
+    QTC::TC("qpdf", "qpdf-c called qpdf_oh_free_buffer");
     if (bufp && *bufp) {
         free(*bufp);
         *bufp = nullptr;
