@@ -629,7 +629,7 @@ qpdf-c stream data filtered set 1
 qpdf-c stream data buf set 1
 qpdf-c called qpdf_oh_get_page_content_data 0
 qpdf-c called qpdf_oh_replace_stream_data 0
-qpdf-c called qpdf_free_buffer 0
+qpdf-c called qpdf_oh_free_buffer 0
 qpdf-c silence oh errors 0
 qpdf-c called qpdf_oh_get_binary_string_value 0
 qpdf-c called qpdf_oh_get_binary_utf8_value 0
